# cleankakao

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: README.md  fetch.ps1
src/: adblocker.rs  config.rs  constants.rs  ico.rs  main.rs  process_watcher.rs  tray.rs  updater.rs  win32.rs  window_events.rs
src/ui/: mod.rs  settings.rs  theme.rs
