[package]
name = "cleankakao"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = ">=0.59, <=0.62", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_UI_Controls",
] }
tray-icon = "0.21"
muda = "0.17"
iced = { version = "0.13", features = ["tokio", "image"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
semver = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["ico", "png", "bmp"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
